RandomContact 2.0.10[Nov 2013]
 -	New design from scratch
 - 	Basic features up and running
 -	Reusing some code from v1
 -	Display the contact numbers as custom adapter in basic style
 -	Added last contacted layout
 -	Added mock data for testing purposes
 -	Random engine is pseudo random with random starts - no repeats until cycles back

RandomContact 2.0.25[Nov 2013]
 - 	ImageButtons for Call and text
 -	Icon for Refresh in ActionBar
 -	Show License information
 -	Added time calendar icon for Last Contacted
 -	Minor changes to library
 -	Experimental support for phone type. Displays as Custom while testing
 
RandomContact 2.0.35[Nov 2013]
 -	Added RoundedImageView in library for displaying contact image as a circle
 -	Fixed width for Profile Details Layout to avoid jittering 
 -	Center align profile image
 -	Hide icon from action bar
 
RandomContact 2.0.42[Nov 2013]
 -	Display Aboutscreen
 -	Hide AppIcon from the action bar for About
 -	Fixed FATAL Exception on clicking License menu
 
RandomContact 2.0.45[Nov 2013]
 -	Supports API 8 and Up
 -	Hide app icon in actionbar on API 11 and up
 -	Minor change to AppIcon
 
RandomContact 2.0.46[Nov 2013]
 -	Phone type correctly read with change in library