@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ae.apps.randomcontact"
-    android:versionCode="45"
+    android:versionCode="50"
     android:versionName="2.0" >
 
     <uses-sdk
