@@ -3,18 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/card_margin"
     tools:context=".MainActivity" >
 
     <!-- User profile pic and name -->
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:background="@drawable/blurred_sky"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/card_padding"
-        android:paddingTop="@dimen/card_padding" >
+        android:paddingLeft="@dimen/card_margin" >
 
         <com.ae.apps.common.views.RoundedImageView
             android:id="@+id/userProfileImage"
@@ -31,91 +29,95 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/card_margin"
             android:text="@string/hello_world"
             android:textColor="@color/dark_gray" />
     </LinearLayout>
 
-    <!-- Contacted Count -->
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/card_margin"
-        android:paddingRight="@dimen/card_margin" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="false"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:text="@string/str_times_contacted" />
-
-        <TextView
-            android:id="@+id/userContactedCount"
-            style="@style/EmphasisedText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:paddingRight="@dimen/card_padding"
-            android:text="@string/str_contact_count"
-            android:textColor="@color/red" />
-    </RelativeLayout>
-
-    <!-- last contacted count -->
-
-    <LinearLayout
-        android:id="@+id/lastContactedLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/card_margin"
-        android:paddingRight="@dimen/card_margin" >
-
-        <ImageView
-            android:id="@+id/calendarIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/empty_text"
-            android:src="@drawable/ic_action_go_to_today" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingRight="@dimen/card_margin"
-            android:text="@string/str_last_contcted_on" />
-
-        <TextView
-            android:id="@+id/lastContactedTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/empty_text" />
-    </LinearLayout>
-
-    <!-- List View Container -->
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/card_margin" >
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
-        <ListView
-            android:id="@android:id/list"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="35"
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@android:id/empty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_margin="5dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="@string/empty_set" />
+            <!-- Contacted Count -->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/card_padding" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/str_times_contacted" />
+
+                <TextView
+                    android:id="@+id/userContactedCount"
+                    style="@style/EmphasisedText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/str_contact_count"
+                    android:textColor="@color/red" />
+            </LinearLayout>
+
+            <!-- last contacted count -->
+
+            <LinearLayout
+                android:id="@+id/lastContactedLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/card_padding" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingRight="@dimen/card_margin"
+                    android:text="@string/str_last_contcted_on" />
+
+                <TextView
+                    android:id="@+id/lastContactedTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/empty_text" />
+            </LinearLayout>
+        </LinearLayout>
+        <!-- List View Container -->
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="65"
+            android:orientation="vertical"
+            android:padding="@dimen/card_margin" >
+
+            <ListView
+                android:id="@android:id/list"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@android:id/empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_margin="5dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="@string/empty_set" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
